db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #
spec:
  replicas: #
  selector:
    matchLabels:
      app: #
  template:
    metadata:
      labels:
        app: #
    spec:
      containers:
      - image: #
        name: #
#        env:
#        - name: PGDATA
#          value: /var/lib/postgresql/data/pgdata
#        - name: POSTGRES_HOST_AUTH_METHOD
#          value: "trust"
#        volumeMounts:
#        - mountPath: /var/lib/postgresql/data
#          name: #
#      volumes:
#      - name: #
#        persistentVolumeClaim:
#          claimName: #
