result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #
  annotations:
    # GKE with shared cert
    # ingress.gcp.kubernetes.io/pre-shared-cert: training
    # Azure only
    # kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: #
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: #
            port:
              number: #
